[package]
name = "makaikit-databases-d7"
version = "0.1.0-alpha.0"
edition = "2021"

[dependencies]
makaikit-databases-serde = { path = "../databases-serde" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
makaikit-fafullfs = { path = "../fafullfs" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
