[package]
name = "makaikit-dll-injector-dinput8"
version = "0.1.0-alpha.0"
license = "GPL-3.0-or-later"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = [
    "errhandlingapi",
    "guiddef",
    "libloaderapi",
    "sysinfoapi",
    "unknwnbase",
]

[lib]
crate_type = ["cdylib"]
name = "dinput8"
