[package]
name = "makaikit-modloader-d6"
version = "0.1.0-alpha.0"
edition = "2021"

[dependencies]
makaikit-dsarcfl = { path = "../dsarcfl" }
lazy_static = "1.4"
log = "0.4"
log4rs = "1.1"
thiserror = "1"
walkdir = "2"

[target.'cfg(target_os = "windows")'.dependencies]
detour = { version = "0.8.1", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = [
    "consoleapi",
    "libloaderapi",
]

[lib]
crate_type = ["cdylib"]
