[package]
name = "makaikit-modloader-d7"
version = "0.1.0-alpha.0"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
makaikit-fafullfs = { path = "../fafullfs" }
makaikit-databases-serde = { path = "../databases-serde" }
makaikit-databases-d7 = { path = "../databases-d7" }
lazy_static = "1.4"
log = "0.4"
log4rs = "1.2"
thiserror = "1"
serde = "1"
serde_json = "1"
json-patch = "1.2"
walkdir = "2"

[target.'cfg(target_os = "windows")'.dependencies]
detour = { version = "0.8.1", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = ["consoleapi", "libloaderapi"]

[lib]
crate_type = ["cdylib"]
